			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

17-Apr-2005
~~~~~~~~~~~
Bugfix: Replacing an existing display settings would erase all the other
        existing settings (Stephen Watson, reported by Henrik Jacobsson).

16-Apr-2005
~~~~~~~~~~~
Bugfix: Expired thumbnails were not being purged from the memory cache
        because of a reference counting issue (Stephen Watson).

14-Apr-2005
~~~~~~~~~~~
Updated Danish translation (Christian Storgaard).

28-Mar-2005
~~~~~~~~~~~
Simplify code to set minibuffer text to red on error (Dennis). Also set
background to white, in case a theme's colour clashes with red (Thomas
Leonard).

23-Mar-2005
~~~~~~~~~~~
Option in list view to show the full MIME-Type comment rather than
just "File" (Stephen Watson).

12-Mar-2005
~~~~~~~~~~~
When building the SendTo menu, allow nested subdirectories more than one
level deep (Jonatan Liljedahl).
Add 'Customise Menu...' to New submenu (Thomas Leonard, suggested by Jesse
Wagner).
Can specify panel item arguments and short cut when adding via SOAP
call (m0n5t3r). 
Also for pinboard items (and fixed bugs related to pinboard_add_with_args)
(Stephen Watson).

28-Feb-2005
~~~~~~~~~~~
Bugfix: Progress bar for count operation didn't finish when the count did
        (Stephen Watson, reported by Alexander Wagner).

24-Feb-2005
~~~~~~~~~~~
Look out for new line character when reading EA MIME type under Solaris 
(Stephen Watson).

13-Feb-2005
~~~~~~~~~~~
Added Estonian translation (Teet Tärno).

12-Feb-2005
~~~~~~~~~~~
Removed copy of GTK icon theme system. We now depend on GTK 2.4, which
includes it (Thomas Leonard).
Renamed 'Before' and 'After' in the bulk rename box to 'Old name' and
'New name', as they were causing problems for translators (reported by
Yuri Bongiorno).
Bugfix: The help for the "Set Type..." box wasn't translated (reported
	by Yuri Bongiorno).

09-Feb-2005
~~~~~~~~~~~
Defer re-generating a thumbnail until 5 seconds after the timestamp on 