@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+21-Apr-2005
+~~~~~~~~~~~
+Try to cope with BadWindow errors (suggested by Kacper Wysock).
+
 17-Apr-2005
 ~~~~~~~~~~~
 Bugfix: Replacing an existing display settings would erase all the other
